--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2013 - 06/2014</span></div>
                      </div>
+
+			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Career Break</h3>
+                           <p>Job market severely impacted by economic downturn. Post-graduation, took the opportunity to continue to enhance my marketable skills through online course. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">07/2024 - Current</span></div>
+                    </div>
+					
 		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Library Student Assistant 3</h3>
